--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 
+<!doctype html>
+<html lang="en" translate="no">
+
+<head>
+    <meta charset="utf-8">
+    <base href="/">   
+
+
+
+
+
+</head>
+
+<body>
+
+  <h1> test</h1>
+
+</body>
+
+</html>
