--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 d-flex align-items-center">
-                            <div class="right-side-content pl-4 pr-4">
+                            <div class="right-side-content p-4">
                                 <h2 class="heading-title">Our Winter Special </h2>
                                 <p>Over the course of decades, a lot has changed about us but one thing hasn’t changed - we’re committed to serving the most authentic taste of India through our products.</p>
                                 <ul>
@@ -180,7 +180,7 @@
                     <div class="row">
                         <div class="col-sm-12 section-title mt-40 mb-30 text-center">
                             <!-- <h2 class="mb-5">Categories</h2> -->
-                            <h2 class="h2-xl meat-color text-uppercase">Categories</h2>
+                            <h2 class="h2-xl text-uppercase">Categories</h2>
                         </div>
                         <div class="categories-wrap">
                             <div class="item col-md-4 col-sm-4 mb-5">
@@ -333,7 +333,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 section-title mb-60 text-center">
-                            <h2 class="h2-xl red-color text-uppercase">Image Gallery</h2>
+                            <h2 class="h2-xl text-uppercase" style="font-weight: 900;">Image Gallery</h2>
                             <p class="description">New Sindh Corner provides unique and pure taste and serves our prestigious customers with quality assured range of Indian sweets, beverages, snacks and more!</p>
 
                         </div>
