--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         <li id="menu-item-1198" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1198"><a href="https://jthemes.net/themes/wp/testo/contact-us/">Contact Us</a></li>
                                     </ul> -->
                                 </li>
-                                <li id="menu-item-742" class="yellow-color nav-btn menu-item menu-item-type-custom menu-item-object-custom menu-item-742"><a href="tel:+91-9811088657">9811088657</a></li>
+                                <li id="menu-item-742" class="yellow-color nav-btn menu-item menu-item-type-custom menu-item-object-custom menu-item-742"><a href="tel:+91-9811088657">981-108-8657</a></li>
                             </ul>
                         </nav>
                         <!-- END MAIN MENU -->
