--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 
-        <link rel='stylesheet' id='testo-fonts-css' href='http://fonts.googleapis.com/css?family=Roboto%3A+100%2C100i%2C300%2C300i%2C400%2C400i%2C500%2C500i%2C700%2C700i%2C900%2C900i%7COswald%3A+200%2C300%2C400%2C500%2C600%2C700%7CLilita+One%3A+400' type='text/css' media='all' />
+        <link rel='stylesheet' id='testo-fonts-css' href='https://fonts.googleapis.com/css?family=Roboto%3A+100%2C100i%2C300%2C300i%2C400%2C400i%2C500%2C500i%2C700%2C700i%2C900%2C900i%7COswald%3A+200%2C300%2C400%2C500%2C600%2C700%7CLilita+One%3A+400' type='text/css' media='all' />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
