--- a/contactus.html
+++ b/contactus.html
@@ -121,14 +121,10 @@
                             </div>
                             <div class="col-md-4 position-relative">
                                 <span class="wpcf7-form-control-wrap your-email">
-                                    <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-email form-control" aria-invalid="false" placeholder="Your Email*">
+                                    <input type="text" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-email form-control" aria-invalid="false" placeholder="Your Number*">
                                 </span>
                             </div>
-                            <div class="col-md-4 position-relative">
-                                <span class="wpcf7-form-control-wrap your-name">
-                                    <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="What is this about? ...">
-                                </span>
-                            </div>
+                         
                             <div class="col-md-12 position-relative">
                                 <span class="wpcf7-form-control-wrap textarea-36">
                                     <textarea name="textarea-36" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea form-control message" aria-invalid="false" placeholder="Your Message ..."></textarea>
