--- a/contactus.html
+++ b/contactus.html
@@ -221,7 +221,7 @@
 
             <!-- FOOTER-3
             ============================================= -->
-            <footer id="footer-3" class="footer division">
+            <footer id="footer-3" class="footer bg-red division">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
@@ -232,35 +232,36 @@
                                 </a>
                             </div>
 
+                            <div class="text-center address-text">
+                                <p class="mb-1">131, Shankar Road Market, New Rajinder Nagar, New Delhi 110060</p>
+                                <p class="mb-1">Phone: +91-9811088657</p>
+                                <p class="mb-3">Email Id: newsindhcorner.7@gmail.com</p>
+                            </div>
+
                             <div class="footer-socials-links">
                                 <ul class="foo-socials text-center clearfix">
                                     <li>
-                                        <a href="#" title="Facebook" data-toggle="tooltip" data-placement="bottom"
-                                            data-animation="false">
+                                        <a href="#" title="Facebook" data-toggle="tooltip" data-placement="bottom" data-animation="false">
                                             <i class="fab fa-facebook-f"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" title="Twitter" data-toggle="tooltip" data-placement="bottom"
-                                            data-animation="false">
+                                        <a href="#" title="Twitter" data-toggle="tooltip" data-placement="bottom" data-animation="false">
                                             <i class="fab fa-twitter"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" title="Behance" data-toggle="tooltip" data-placement="bottom"
-                                            data-animation="false">
+                                        <a href="#" title="Behance" data-toggle="tooltip" data-placement="bottom" data-animation="false">
                                             <i class="fab fa-behance"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" title="Youtube" data-toggle="tooltip" data-placement="bottom"
-                                            data-animation="false">
+                                        <a href="#" title="Youtube" data-toggle="tooltip" data-placement="bottom" data-animation="false">
                                             <i class="fab fa-youtube"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" title="Pinterest" data-toggle="tooltip" data-placement="bottom"
-                                            data-animation="false">
+                                        <a href="#" title="Pinterest" data-toggle="tooltip" data-placement="bottom" data-animation="false">
                                             <i class="fab fa-pinterest-p"></i>
                                         </a>
                                     </li>
@@ -268,32 +269,23 @@
                                 </ul>
                             </div>
 
-                            <!-- FOOTER LINKS -->
-                            <div class="footer-links">
-                                <ul id="menu-footer-menu" class="bottom-footer-list clearfix">
-                                    <li id="menu-item-1162"
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1162">
-                                        <a href="#">ABOUT</a></li>
-                                    <li id="menu-item-1163"
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1163">
-                                        <a href="#">MENU</a></li>
-
-                                    <li id="menu-item-1166"
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1166">
-                                        <a href="#">LOCATIONS</a></li>
-                                    <li id="menu-item-1167"
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1167">
-                                        <a href="#">CONTACT</a></li>
-                                </ul>
+                            <div class="d-flex align-content-center justify-content-between pt-4 pb-4 border-top border-warning">
+                                <!-- FOOTER LINKS -->
+                                <div class="footer-links">
+                                    <ul id="menu-footer-menu" class="bottom-footer-list clearfix">
+                                        <li id="menu-item-1162" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1162"><a href="#">ABOUT</a></li>
+                                        <li id="menu-item-1163" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1163"><a href="#">MENU</a></li>
+             
+                                        <li id="menu-item-1166" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1166"><a href="#">LOCATIONS</a></li>
+                                        <li id="menu-item-1167" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1167"><a href="#">CONTACT</a></li>
+                                    </ul>
+                                </div>
+    
+                                <!-- FOOTER COPYRIGHT -->
+                                <div class="footer-copyright">
+                                    <p style="line-height: 27px;">2021 © Copyright, Testo. All rights reserved.</p>
+                                </div>
                             </div>
-
-
-                            <!-- FOOTER COPYRIGHT -->
-                            <div class="footer-copyright">
-                                <p>2021 © Copyright, Testo. All rights reserved.</p>
-                            </div>
-
-
                         </div>
                     </div>
                     <!-- End row -->
