Add gallery page

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12 text-center">
-                                <a href="" class="btn btn-md btn-red tra-red-hover">view more</a>
+                                <a href="gallary.html" class="btn btn-md btn-red tra-red-hover">view more</a>
                             </div>
                         </div>
                     </div>
