--- a/contactus.html
+++ b/contactus.html
@@ -89,14 +89,12 @@
             </header>
             <!-- END HEADER-3 -->
 
-            <section class="bg-banner page-hero-section division" style="background-image:   linear-gradient(
-                rgba(255, 0, 0, 0.45), 
-                rgba(255, 0, 0, 0.45)
+            <section class="bg-banner page-hero-section division" style="background-image:
                 linear-gradient(
                 rgb(161 161 161 / 45%), 
                 rgb(43 36 36 / 45%)
               ),url(img/menuandother/contact-banner.png)
-              )">
+              ">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 offset-lg-1">
