--- a/gallary.html
+++ b/gallary.html
@@ -628,7 +628,7 @@
                                 </ul>
                             </div>
 
-                            <div class="d-flex align-content-center justify-content-between pt-4 pb-4 border-top border-warning">
+                            <div class="d-sm-flex align-content-center justify-content-between pt-4 pb-4 border-top border-warning">
                                 <!-- FOOTER LINKS -->
                                 <div class="footer-links">
                                     <ul id="menu-footer-menu" class="bottom-footer-list clearfix">
