Add whatsapp form

--- a/gallary.html
+++ b/gallary.html
@@ -577,10 +577,32 @@
                     </div>
                 </div>
             </section>
+            <div class="p-4"></div>
+            <section class="whatsApp-form">
+                <form class="wpcf7-form init">
+                    <div class="row booking-form">
+                        <div class="col col-sm-4">
+                            <div class="d-flex flex-column">
+                                <div class="subs-head">Subscribe to get in touch</div>
+                                <div class="subs-body">Subscribe to get in touch</div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-5">
+                            <span class="wpcf7-form-control-wrap your-name">
+                                <input type="email" name="Enter Your Email ID" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="Your Name*">
+                            </span>
+                        </div>
+                        <div class="col col-sm-3">
+                            <input type="submit" value="SUBSCRIBE" class="btn btn-md btn-warning">
+                            <span class="wpcf7-spinner"></span>
+                        </div>
+                    </div>
+                </form>
+            </section>
 
             <!-- FOOTER-3
             ============================================= -->
-            <footer id="footer-3" class="footer bg-red division">
+            <footer id="footer-3" class="footer bg-red division" style="background-image: url('img/footerBG.jpg');">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
