--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
             <section class="backgrond-attached">
             </section>
 
-            <section>
+            <section class="mb-4">
                 <div id="carouselExampleIndicators-3" class="carousel slide carousel-fade position-relative review-block" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators-3" data-slide-to="0" class="active"></li>
@@ -627,9 +627,30 @@
                 </div>
             </section>
 
+            <section class="whatsApp-form">
+                <form class="wpcf7-form init">
+                    <div class="row booking-form">
+                        <div class="col col-sm-4">
+                            <div class="d-flex flex-column">
+                                <div class="subs-head">Subscribe to get in touch</div>
+                                <div class="subs-body">Subscribe to get in touch</div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-5">
+                            <span class="wpcf7-form-control-wrap your-name">
+                                <input type="email" name="Enter Your Email ID" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="Your Name*">
+                            </span>
+                        </div>
+                        <div class="col col-sm-3">
+                            <input type="submit" value="SUBSCRIBE" class="btn btn-md btn-warning">
+                            <span class="wpcf7-spinner"></span>
+                        </div>
+                    </div>
+                </form>
+            </section>
             <!-- FOOTER-3
             ============================================= -->
-            <footer id="footer-3" class="footer bg-red division">
+            <footer id="footer-3" class="footer bg-red division position-relative" style="background-image: url('img/footerBG.jpg');">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
