--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </head>
     <body>
         <!-- PRE LOADER -->
-        <section class="preloader">
+       <!--  <section class="preloader">
             <div class="spinner">
                 <span class="spinner-rotate"></span>
             </div>
-        </section>
+        </section> -->
         <div id="wrapper">
             <!-- HEADER-3 ============================================= -->
             <header id="header-3" class="header-style-one header navik-header header-transparent header-shadow">
@@ -30,8 +30,7 @@
                     <!-- NAVIGATION MENU -->
                     <div class="navik-header-container">
                         <!-- CALL BUTTON -->
-                        <div class="callusbtn"><a href="tel:123456789"><i class="fas fa-phone"></i></a></div>
-
+                        <div class="callusbtn"><a href="+91-9811088657"><i class="fas fa-phone"></i></a></div>
                         <!-- LOGO IMAGE -->
                         <div class="logo" data-mobile-logo="./img/logo1.png" data-sticky-logo="./img/logo1.png">
 
@@ -627,22 +626,24 @@
                 </div>
             </section>
 
-            <section class="whatsApp-form">
+    <section class="whatsApp-form">
                 <form class="wpcf7-form init">
                     <div class="row booking-form">
-                        <div class="col col-sm-4">
+                        <div class="col col-sm-8">
                             <div class="d-flex flex-column">
-                                <div class="subs-head">Subscribe to get in touch</div>
-                                <div class="subs-body">Subscribe to get in touch</div>
+                                <div class="subs-head">Get in touch</div>
+                                <div class="subs-body">Click to Send message</div>
                             </div>
                         </div>
-                        <div class="col col-sm-5">
+                        <!-- <div class="col col-sm-5">
                             <span class="wpcf7-form-control-wrap your-name">
                                 <input type="email" name="Enter Your Email ID" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="Your Name*">
                             </span>
-                        </div>
+                        </div> -->
                         <div class="col col-sm-3">
-                            <input type="submit" value="SUBSCRIBE" class="btn btn-md btn-warning">
+                            <button type="button" class="btn btn-md btn-success whatsappcta">
+                          SEND  <i class="fa fa-whatsapp" aria-hidden="true"></i>
+</button>
                             <span class="wpcf7-spinner"></span>
                         </div>
                     </div>
