--- a/contactus.html
+++ b/contactus.html
@@ -191,7 +191,7 @@
                         <div class="col">
                             <div class="cbox-3 contact-style3">
                                 <!-- Image -->
-                                <span class="contact-icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                                <span class="contact-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
                 
                                 <!-- Text -->
                                 <div class="cbox-3-txt">
@@ -218,22 +218,24 @@
 
 
             <div class="p-4"></div>
-            <section class="whatsApp-form">
+   <section class="whatsApp-form">
                 <form class="wpcf7-form init">
                     <div class="row booking-form">
-                        <div class="col col-sm-4">
+                        <div class="col col-sm-8">
                             <div class="d-flex flex-column">
-                                <div class="subs-head">Subscribe to get in touch</div>
-                                <div class="subs-body">Subscribe to get in touch</div>
+                                <div class="subs-head">Get in touch</div>
+                                <div class="subs-body">Click to Send message</div>
                             </div>
                         </div>
-                        <div class="col col-sm-5">
+                        <!-- <div class="col col-sm-5">
                             <span class="wpcf7-form-control-wrap your-name">
                                 <input type="email" name="Enter Your Email ID" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="Your Name*">
                             </span>
-                        </div>
+                        </div> -->
                         <div class="col col-sm-3">
-                            <input type="submit" value="SUBSCRIBE" class="btn btn-md btn-warning">
+                            <button type="button" class="btn btn-md btn-success whatsappcta">
+                          SEND  <i class="fa fa-whatsapp" aria-hidden="true"></i>
+</button>
                             <span class="wpcf7-spinner"></span>
                         </div>
                     </div>
