--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                         </div> -->
                         <div class="col col-sm-3">
                             <button type="button" class="btn btn-md btn-success whatsappcta">
-                          SEND  <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                          SEND  <i class="fab fa-whatsapp" aria-hidden="true"></i>
 </button>
                             <span class="wpcf7-spinner"></span>
                         </div>
