--- a/gallary.html
+++ b/gallary.html
@@ -593,8 +593,11 @@
                             </span>
                         </div> -->
                         <div class="col col-sm-3">
-                            <button type="button" class="btn btn-md btn-success whatsappcta">
+                <button type="button" class="btn btn-md btn-success whatsappcta" >
+                                <a href="https://api.whatsapp.com/send?phone=919811088657">
+
                           SEND  <i class="fab fa-whatsapp" aria-hidden="true"></i>
+</a>
 </button>
                             <span class="wpcf7-spinner"></span>
                         </div>
