--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <!-- NAVIGATION MENU -->
                     <div class="navik-header-container">
                         <!-- CALL BUTTON -->
-                        <div class="callusbtn"><a href="+91-9811088657"><i class="fas fa-phone"></i></a></div>
+                        <div class="callusbtn"><a href="tel:+91-9811088657"><i class="fas fa-phone"></i></a></div>
                         <!-- LOGO IMAGE -->
                         <div class="logo" data-mobile-logo="./img/logo1.png" data-sticky-logo="./img/logo1.png">
 
