--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                       <h1 class="hero-section-title text-left ml6 ">
                                           <span class="text-wrapper">
                                               <span class="letters">A taste from paradise.</span>
-                                            </span>
+                                        </span>
                                       </h1>
                                     </div>
                                </div>
@@ -100,27 +100,27 @@
                      </div>
 
                      <div class="item item-second">
-                          <div class="caption">
+                          <!-- <div class="caption">
                                <div class="container">
                                     <div class="col-md-8 col-sm-12">
-                                         <!-- <h3>Your Perfect Breakfast</h3>
+                                         <h3>Your Perfect Breakfast</h3>
                                          <h1>The best dinning quality can be here too!</h1>
-                                         <a href="#menu" class="section-btn btn btn-default smoothScroll">Discover menu</a> -->
+                                         <a href="#menu" class="section-btn btn btn-default smoothScroll">Discover menu</a>
                                     </div>
                                </div>
-                          </div>
+                          </div> -->
                      </div>
 
                      <div class="item item-third">
-                          <div class="caption">
+                          <!-- <div class="caption">
                                <div class="container">
                                     <div class="col-md-8 col-sm-12">
-                                         <!-- <h3>New Restaurant in Town</h3>
+                                         <h3>New Restaurant in Town</h3>
                                          <h1>Enjoy our special menus every Sunday and Friday</h1>
-                                         <a href="#contact" class="section-btn btn btn-default smoothScroll">Reservation</a> -->
+                                         <a href="#contact" class="section-btn btn btn-default smoothScroll">Reservation</a>
                                     </div>
                                </div>
-                          </div>
+                          </div> -->
                      </div>
                 </div>
            </section>
@@ -169,7 +169,8 @@
                 </div>
             </section>
 
-            <section class="services-content-wrapper">
+            <section>
+                <img src="img/menuandother/Poster.jpg" alt="">
             </section>
 
             <section class="homepage-section category-section-wrapper mb-90" id="category-sections">
@@ -626,10 +627,10 @@
                 </div>
             </section>
 
-    <section class="whatsApp-form">
+            <section class="whatsApp-form">
                 <form class="wpcf7-form init">
-                    <div class="row booking-form">
-                        <div class="col col-sm-8">
+                    <div class="row">
+                        <div class="col">
                             <div class="d-flex flex-column">
                                 <div class="subs-head">Get in touch</div>
                                 <div class="subs-body">Click to Send message</div>
@@ -640,14 +641,10 @@
                                 <input type="email" name="Enter Your Email ID" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="Your Name*">
                             </span>
                         </div> -->
-                        <div class="col col-sm-3">
-          <button type="button" class="btn btn-md btn-success whatsappcta" >
-                                <a href="https://api.whatsapp.com/send?phone=919811088657">
-
-                          SEND  <i class="fab fa-whatsapp" aria-hidden="true"></i>
-</a>
-</button>
-                            <span class="wpcf7-spinner"></span>
+                        <div class="ml-auto pr-3">
+                            <button type="button" class="btn btn-md btn-success whatsappcta" >
+                                <a href="https://api.whatsapp.com/send?phone=919811088657"> SEND <i class="fab fa-whatsapp" aria-hidden="true"></i></a>
+                            </button>
                         </div>
                     </div>
                 </form>
