--- a/index.html
+++ b/index.html
@@ -99,29 +99,9 @@
                           </div>
                      </div>
 
-                     <div class="item item-second">
-                          <!-- <div class="caption">
-                               <div class="container">
-                                    <div class="col-md-8 col-sm-12">
-                                         <h3>Your Perfect Breakfast</h3>
-                                         <h1>The best dinning quality can be here too!</h1>
-                                         <a href="#menu" class="section-btn btn btn-default smoothScroll">Discover menu</a>
-                                    </div>
-                               </div>
-                          </div> -->
-                     </div>
+                     <div class="item item-second"> </div>
 
-                     <div class="item item-third">
-                          <!-- <div class="caption">
-                               <div class="container">
-                                    <div class="col-md-8 col-sm-12">
-                                         <h3>New Restaurant in Town</h3>
-                                         <h1>Enjoy our special menus every Sunday and Friday</h1>
-                                         <a href="#contact" class="section-btn btn btn-default smoothScroll">Reservation</a>
-                                    </div>
-                               </div>
-                          </div> -->
-                     </div>
+                     <div class="item item-third"> </div>
                 </div>
            </section>
 
@@ -636,11 +616,6 @@
                                 <div class="subs-body">Click to Send message</div>
                             </div>
                         </div>
-                        <!-- <div class="col col-sm-5">
-                            <span class="wpcf7-form-control-wrap your-name">
-                                <input type="email" name="Enter Your Email ID" value="" size="40" class="wpcf7-form-control wpcf7-text form-control" aria-invalid="false" placeholder="Your Name*">
-                            </span>
-                        </div> -->
                         <div class="ml-auto pr-3">
                             <button type="button" class="btn btn-md btn-success whatsappcta" >
                                 <a href="https://api.whatsapp.com/send?phone=919811088657"> SEND <i class="fab fa-whatsapp" aria-hidden="true"></i></a>
@@ -723,6 +698,8 @@
                 <!-- End container -->
             </footer>
             <!-- END FOOTER-3 -->
+
+            <div class="position-fixed bg-orange text-white d-flex align-items-center justify-content-center" style="width: 32px; height: 32px; bottom: 15px; right: 15px; z-index: 999; cursor: pointer;"><i class="fab fa-whatsapp" aria-hidden="true"></i></div>
         </div>
         <script type='text/javascript' src='./js//lib/bootstrap.min5152.js?ver=1.0' id='bootstrap-js'></script>
         <script type='text/javascript' src='./js//lib/animate5152.js?ver=1.0' id='animate-js'> </script>
