Hide whatsapp button

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
             </footer>
             <!-- END FOOTER-3 -->
 
-            <div class="position-fixed bg-orange text-white d-flex align-items-center justify-content-center" style="width: 32px; height: 32px; bottom: 15px; right: 15px; z-index: 999; cursor: pointer;"><i class="fab fa-whatsapp" aria-hidden="true"></i></div>
+            <div class="position-fixed bg-orange text-white align-items-center justify-content-center d-none d-sm-flex" style="width: 32px; height: 32px; bottom: 15px; right: 15px; z-index: 999; cursor: pointer;"><i class="fab fa-whatsapp" aria-hidden="true"></i></div>
         </div>
         <script type='text/javascript' src='./js//lib/bootstrap.min5152.js?ver=1.0' id='bootstrap-js'></script>
         <script type='text/javascript' src='./js//lib/animate5152.js?ver=1.0' id='animate-js'> </script>
