--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </section>
 
             <section>
-                <img src="img/menuandother/Poster.jpg" alt="">
+                <img src="img/menuandother/Poster.jpg"  class="w-100" alt="">
             </section>
 
             <section class="homepage-section category-section-wrapper mb-90" id="category-sections">
